--- a/dashboard.html
+++ b/dashboard.html
@@ -22,43 +22,67 @@
   <div class="full-page dashboard">
     <div class="container dashboard-container">
       <h1>REDD Lab App</h1>
-      <h2>Your Workshop Results</h2><br><br>
-      <ul class="nav nav-tabs" role="tablist">
-        <li role="presentation" class="active"><a href="#ranking" aria-controls="ranking" role="tab" data-toggle="tab">Ranking</a></li>
-        <li role="presentation"><a href="#comments" aria-controls="comments" role="tab" data-toggle="tab">Comments</a></li>
-      </ul>
-      <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="ranking">
-          <h3>Ranking based on Reactions</h3>
-          <ol type="1">
-            <li>
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-md-6">
-                    <h4>Name of Page</h4>
-                    <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="chart-container">
-                      <canvas id="myChart" width="200" height="200"></canvas>
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div id="legend"></div>
+      <h2>Workshop Results: Ranking Based on Reactions</h2><br><br>
+      <div id="ranking">
+        <ol type="1">
+          <li>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Name of Page</h3>
+                  <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
+                  <div class="icon-container">
+                    <img src="icons/like.svg" class="icon"> 35 + 
+                    <img src="icons/share.svg" class="icon"> 8 /
+                    <img src="icons/avatar.svg" class="icon"> 370 = 11.6 %
                   </div>
                 </div>
+                <div class="col-md-3">
+                  <div class="chart-container">
+                    <canvas id="chart1" width="180" height="180"></canvas>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div id="legend1"></div>
+                  <br>
+                  <h4>View Comments >></h4>
+                </div>
               </div>
-            </li>
-          </ol>
-        </div>
-        <div role="tabpanel" class="tab-pane" id="comments">Hello</div>
+            </div>
+          </li>
+          <li>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Name of Page</h3>
+                  <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
+                  <div class="icon-container">
+                    <img src="icons/like.svg" class="icon"> 26 + 
+                    <img src="icons/share.svg" class="icon"> 7 /
+                    <img src="icons/avatar.svg" class="icon"> 388 = 8.5 %
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div class="chart-container">
+                    <canvas id="chart2" width="180" height="180"></canvas>
+                  </div>
+                </div>
+                <div class="col-md-3">
+                  <div id="legend2"></div>
+                  <br>
+                  <h4>View Comments >></h4>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ol>
       </div>
     </div>
   </div>
 
   <footer>
     <div class="container">
-      <a href="http://www.flaticon.com/packs/multimedia-collection" target="_blank">Icons designed by Gregor Cresnar and distributed by Flaticon.</a>
+      App designed by <a href="http//www.softwarebusinesslab.fi" target="_blank">Software Business Lab</a>, Aalto University. Icons designed by <a href="http://www.flaticon.com/packs/multimedia-collection" target="_blank">Gregor Cresnar</a> and distributed by <a href="http://www.flaticon.com/">Flaticon</a>.
     </div>
   </footer>
 
@@ -75,7 +99,7 @@
 
   <script>
   $(document).ready(function() {
-    var pieData = [
+    var data1 = [
       {
           value: 35,
           color: "#46BFBD",
@@ -96,13 +120,42 @@
       }
       ];
 
-    var pie_ctx = document.getElementById("myChart").getContext("2d");
-    window.myPie = new Chart(pie_ctx).Pie(pieData, {
+    var ctx1 = document.getElementById("chart1").getContext("2d");
+    window.pie1 = new Chart(ctx1).Pie(data1, {
         legendTemplate : "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label){%><%=segments[i].label%><%}%></li><%}%></ul>"
     });
 
-    var legend = myPie.generateLegend();
-    $("#legend").html(legend);
+    var legend = pie1.generateLegend();
+    $("#legend1").html(legend);
+
+    var data2 = [
+      {
+          value: 26,
+          color: "#46BFBD",
+          highlight: "#5AD3D1",
+          label: "Likes"
+      },
+      {
+          value: 7,
+          color: "#4D5360",
+          highlight: "#616774",
+          label: "Shares"
+      },
+      {
+          value: 388,
+          color: "#F7464A",
+          highlight: "#FF5A5E",
+          label: "No Reactions"
+      }
+      ];
+
+    var ctx2 = document.getElementById("chart2").getContext("2d");
+    window.pie2 = new Chart(ctx2).Pie(data2, {
+        legendTemplate : "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label){%><%=segments[i].label%><%}%></li><%}%></ul>"
+    });
+
+    var legend = pie2.generateLegend();
+    $("#legend2").html(legend);
 
   });
   </script>
