--- a/dashboard.html
+++ b/dashboard.html
@@ -22,6 +22,7 @@
   <div class="full-page dashboard">
     <div class="container dashboard-container">
       <h1>REDD Lab App</h1>
+      <br>
       <h2>Workshop Results: Ranking Based on Reactions</h2><br><br>
       <div id="ranking">
         <ol type="1">
@@ -45,7 +46,7 @@
                 <div class="col-md-3">
                   <div id="legend1"></div>
                   <br>
-                  <h4>View Comments >></h4>
+                  <h4><a href="comments.html">View Comments >></a></h4>
                 </div>
               </div>
             </div>
@@ -70,7 +71,7 @@
                 <div class="col-md-3">
                   <div id="legend2"></div>
                   <br>
-                  <h4>View Comments >></h4>
+                  <h4><a href="comments.html">View Comments >></a></h4>
                 </div>
               </div>
             </div>
@@ -82,7 +83,7 @@
 
   <footer>
     <div class="container">
-      App designed by <a href="http//www.softwarebusinesslab.fi" target="_blank">Software Business Lab</a>, Aalto University. Icons designed by <a href="http://www.flaticon.com/packs/multimedia-collection" target="_blank">Gregor Cresnar</a> and distributed by <a href="http://www.flaticon.com/">Flaticon</a>.
+      App designed by <a href="http://www.softwarebusinesslab.fi" target="_blank">Software Business Lab</a>, Aalto University. Icons designed by <a href="http://www.flaticon.com/packs/multimedia-collection" target="_blank">Gregor Cresnar</a> and distributed by <a href="http://www.flaticon.com/" target="_blank">Flaticon</a>.
     </div>
   </footer>
 
