New design for Dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -19,8 +19,13 @@
 
 <body>
 
-  <div class="full-page dashboard">
+  <div class="full-page landing">
     <div class="container dashboard-container">
+      <a href="index.html">
+        <button id="logout" type="button" class="btn btn-default">
+          Log out <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+        </button>
+      </a>
       <h1>REDD Lab App</h1>
       <br>
       <h2>Workshop Results: Ranking Based on Reactions</h2><br><br>
@@ -46,7 +51,7 @@
                 <div class="col-md-3">
                   <div id="legend1"></div>
                   <br>
-                  <h4><a href="comments.html">View Comments >></a></h4>
+                  <h4><a href="#">View Comments >></a></h4>
                 </div>
               </div>
             </div>
@@ -71,7 +76,64 @@
                 <div class="col-md-3">
                   <div id="legend2"></div>
                   <br>
-                  <h4><a href="comments.html">View Comments >></a></h4>
+                  <h4><a href="#">View Comments >></a></h4>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Name of Page</h3>
+                  <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
+                  <div class="icon-container">
+                    <img src="icons/like.svg" class="icon"> 35 + 
+                    <img src="icons/share.svg" class="icon"> 8 /
+                    <img src="icons/avatar.svg" class="icon"> 370 = 11.6 %
+                  </div>
+                </div>
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-3">
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Name of Page</h3>
+                  <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
+                  <div class="icon-container">
+                    <img src="icons/like.svg" class="icon"> 35 + 
+                    <img src="icons/share.svg" class="icon"> 8 /
+                    <img src="icons/avatar.svg" class="icon"> 370 = 11.6 %
+                  </div>
+                </div>
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-3">
+                </div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Name of Page</h3>
+                  <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
+                  <div class="icon-container">
+                    <img src="icons/like.svg" class="icon"> 35 + 
+                    <img src="icons/share.svg" class="icon"> 8 /
+                    <img src="icons/avatar.svg" class="icon"> 370 = 11.6 %
+                  </div>
+                </div>
+                <div class="col-md-3">
+                </div>
+                <div class="col-md-3">
                 </div>
               </div>
             </div>
@@ -79,13 +141,12 @@
         </ol>
       </div>
     </div>
-  </div>
-
-  <footer>
-    <div class="container">
-      App designed by <a href="http://www.softwarebusinesslab.fi" target="_blank">Software Business Lab</a>, Aalto University. Icons designed by <a href="http://www.flaticon.com/packs/multimedia-collection" target="_blank">Gregor Cresnar</a> and distributed by <a href="http://www.flaticon.com/" target="_blank">Flaticon</a>.
-    </div>
+    <footer>
+      <div class="container">
+        App designed by <a href="http://www.softwarebusinesslab.fi" target="_blank">Software Business Lab</a>, Aalto University. Icons designed by <a href="http://www.flaticon.com/packs/multimedia-collection" target="_blank">Gregor Cresnar</a> and distributed by <a href="http://www.flaticon.com/" target="_blank">Flaticon</a>.
+      </div>
   </footer>
+  </div>
 
   <!-- SCRIPTS -->
 
