--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-  <div class="full-page landing">
+  <div class="full-page">
     <div class="head">
       <h1>REDD Lab App</h1><br>
       <h2>Log in with Facebook to see your REDD Lab data!</h2><br><br>
