--- a/dashboard.html
+++ b/dashboard.html
@@ -7,6 +7,8 @@
   <title>REDD Lab App</title>
   <meta name="description" content="REDD Lab App">
   <meta name="author" content="Aalto University Software Business Lab">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -25,7 +27,7 @@
       <!-- LOG OUT BUTTON -->
       <a href="index.html">
         <button id="logout" type="button" class="btn btn-default">
-          Log out <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+          Log out</span>
         </button>
       </a>
 
