--- a/logged.html
+++ b/logged.html
@@ -7,6 +7,8 @@
   <title>REDD Lab App</title>
   <meta name="description" content="REDD Lab App">
   <meta name="author" content="Aalto University Software Business Lab">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -20,6 +22,12 @@
 <body>
 
   <div class="full-page">
+    <!-- LOG OUT BUTTON -->
+      <a href="index.html">
+        <button id="logout" type="button" class="btn btn-default">
+          Log out
+        </button>
+      </a>
     <div class="head">
       <h1>REDD Lab App</h1><br>
       <h2>Choose the pages you want to include:</h2><br><br>
