--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>REDD Lab App</title>
   <meta name="description" content="REDD Lab App">
   <meta name="author" content="Aalto University Software Business Lab">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
