Footer fixed to bottom

--- a/logged.html
+++ b/logged.html
@@ -56,6 +56,9 @@
         </button>
       </a>
     </div>
+    <footer>
+        App designed by <a href="http://www.softwarebusinesslab.fi" target="_blank">Software Business Lab</a>, Aalto University. Icons designed by <a href="http://www.flaticon.com/packs/multimedia-collection" target="_blank">Gregor Cresnar</a> and distributed by <a href="http://www.flaticon.com/" target="_blank">Flaticon</a>.
+    </footer>
   </div>
 
   <!-- SCRIPTS -->
