--- a/dashboard.html
+++ b/dashboard.html
@@ -46,9 +46,8 @@
                   <h3>Name of Page</h3>
                   <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
                   <div class="icon-container">
-                    <img src="icons/like.svg" class="icon"> 35 + 
-                    <img src="icons/share.svg" class="icon"> 8 /
-                    <img src="icons/avatar.svg" class="icon"> 370 = 11.6 %
+                    <img src="icons/like.svg" class="icon"> 35 /
+                    <img src="icons/avatar.svg" class="icon"> 370 = 9.5 %
                   </div>
                 </div>
                 <div class="col-md-3">
@@ -61,7 +60,7 @@
                   <!-- PIE CHART LABELS -->
                   <div id="legend1"></div>
                   <br>
-                  <h4><a href="#">View Comments >></a></h4>
+                  <h4><a href="comments.html">View Comments >></a></h4>
                 </div>
               </div>
             </div>
@@ -73,9 +72,8 @@
                   <h3>Name of Page</h3>
                   <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
                   <div class="icon-container">
-                    <img src="icons/like.svg" class="icon"> 26 + 
-                    <img src="icons/share.svg" class="icon"> 7 /
-                    <img src="icons/avatar.svg" class="icon"> 388 = 8.5 %
+                    <img src="icons/like.svg" class="icon"> 26 /
+                    <img src="icons/avatar.svg" class="icon"> 388 = 6.7 %
                   </div>
                 </div>
                 <div class="col-md-3">
@@ -86,7 +84,7 @@
                 <div class="col-md-3">
                   <div id="legend2"></div>
                   <br>
-                  <h4><a href="#">View Comments >></a></h4>
+                  <h4><a href="comments.html">View Comments >></a></h4>
                 </div>
               </div>
             </div>
@@ -98,9 +96,8 @@
                   <h3>Name of Page</h3>
                   <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
                   <div class="icon-container">
-                    <img src="icons/like.svg" class="icon"> 35 + 
-                    <img src="icons/share.svg" class="icon"> 8 /
-                    <img src="icons/avatar.svg" class="icon"> 370 = 11.6 %
+                    <img src="icons/like.svg" class="icon"> 35 /
+                    <img src="icons/avatar.svg" class="icon"> 370 = 9.5 %
                   </div>
                 </div>
                 <div class="col-md-3">
@@ -117,9 +114,8 @@
                   <h3>Name of Page</h3>
                   <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
                   <div class="icon-container">
-                    <img src="icons/like.svg" class="icon"> 35 + 
-                    <img src="icons/share.svg" class="icon"> 8 /
-                    <img src="icons/avatar.svg" class="icon"> 370 = 11.6 %
+                    <img src="icons/like.svg" class="icon"> 35 /
+                    <img src="icons/avatar.svg" class="icon"> 370 = 9.5 %
                   </div>
                 </div>
                 <div class="col-md-3">
@@ -136,9 +132,8 @@
                   <h3>Name of Page</h3>
                   <h5>"Kitty scratches couch bad kitty human give me attention meow make cute face inspect anything brought into the house, for sit in box. Drink water out of the faucet missing until dinner time, or paw at your fat belly and stare at the wall, play with food and get confused."</h5>
                   <div class="icon-container">
-                    <img src="icons/like.svg" class="icon"> 35 + 
-                    <img src="icons/share.svg" class="icon"> 8 /
-                    <img src="icons/avatar.svg" class="icon"> 370 = 11.6 %
+                    <img src="icons/like.svg" class="icon"> 35 /
+                    <img src="icons/avatar.svg" class="icon"> 370 = 9.5 %
                   </div>
                 </div>
                 <div class="col-md-3">
@@ -179,12 +174,6 @@
           label: "Likes"
       },
       {
-          value: 8,
-          color: "#4D5360",
-          highlight: "#616774",
-          label: "Shares"
-      },
-      {
           value: 370,
           color: "#F7464A",
           highlight: "#FF5A5E",
@@ -211,12 +200,6 @@
           color: "#46BFBD",
           highlight: "#5AD3D1",
           label: "Likes"
-      },
-      {
-          value: 7,
-          color: "#4D5360",
-          highlight: "#616774",
-          label: "Shares"
       },
       {
           value: 388,
